RESOLVED FIXED 118050
[curl] Fix unused variable/parameter warnings
https://bugs.webkit.org/show_bug.cgi?id=118050
Summary [curl] Fix unused variable/parameter warnings
Peter Gal
Reported 2013-06-26 00:29:39 PDT
During the build there are a few warning reporting unused variable/parameter in the curl parts.
Attachments
patch (4.51 KB, patch)
2013-06-26 00:36 PDT, Peter Gal
no flags
patch v2 (4.75 KB, patch)
2013-06-27 02:26 PDT, Peter Gal
no flags
Peter Gal
Comment 1 2013-06-26 00:36:25 PDT
Created attachment 205459 [details] patch This should get rid of the warnings.
WebKit Commit Bot
Comment 2 2013-06-26 00:39:07 PDT
Attachment 205459 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/network/curl/CredentialStorageCurl.cpp', u'Source/WebCore/platform/network/curl/DNSCurl.cpp', u'Source/WebCore/platform/network/curl/ResourceHandleManager.cpp']" exit_code: 1 Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:118: curl_lock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:124: curl_unlock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peter Gal
Comment 3 2013-06-26 00:43:10 PDT
(In reply to comment #2) > Attachment 205459 [details] did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/network/curl/CredentialStorageCurl.cpp', u'Source/WebCore/platform/network/curl/DNSCurl.cpp', u'Source/WebCore/platform/network/curl/ResourceHandleManager.cpp']" exit_code: 1 > Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:118: curl_lock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] > Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:124: curl_unlock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] > Total errors found: 2 in 4 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. I don't think we should address this in this patch.
Chris Dumez
Comment 4 2013-06-26 10:49:35 PDT
Comment on attachment 205459 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=205459&action=review > Source/WebCore/ChangeLog:7 > + Missing changelog.
Peter Gal
Comment 5 2013-06-27 02:26:36 PDT
Created attachment 205580 [details] patch v2 now with "pretty changelog"
WebKit Commit Bot
Comment 6 2013-06-27 02:29:08 PDT
Attachment 205580 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/network/curl/CredentialStorageCurl.cpp', u'Source/WebCore/platform/network/curl/DNSCurl.cpp', u'Source/WebCore/platform/network/curl/ResourceHandleManager.cpp']" exit_code: 1 Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:118: curl_lock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/platform/network/curl/ResourceHandleManager.cpp:124: curl_unlock_callback is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 7 2013-06-27 02:45:55 PDT
Comment on attachment 205580 [details] patch v2 ok, r=me.
WebKit Commit Bot
Comment 8 2013-06-27 03:28:42 PDT
Comment on attachment 205580 [details] patch v2 Clearing flags on attachment: 205580 Committed r152087: <http://trac.webkit.org/changeset/152087>
WebKit Commit Bot
Comment 9 2013-06-27 03:28:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.