[curl] Fix unused variable/parameter warnings https://bugs.webkit.org/show_bug.cgi?id=118050

Patch by Peter Gal <galpeter@inf.u-szeged.hu> on 2013-06-27
Reviewed by Christophe Dumez.

Commented out unused parameters and removed an unused variable in the curl backend.

No tests required.

* platform/network/curl/CredentialStorageCurl.cpp:
(WebCore::CredentialStorage::getFromPersistentStorage):
* platform/network/curl/DNSCurl.cpp:
(WebCore::prefetchDNS):
* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::curl_lock_callback):
(WebCore::curl_unlock_callback):
(WebCore::headerCallback):
(WebCore::ResourceHandleManager::downloadTimerCallback):

Canonical link: https://commits.webkit.org/136166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152087 268f45cc-cd09-0410-ab3c-d52691b4dbfc