Source/WebCore/platform/network/curl/ResourceHandleManager.cpp
@@ -115,13 +115,13 @@ static Mutex* sharedResourceMutex(curl_lock_data data) {
 // libcurl does not implement its own thread synchronization primitives.
 // these two functions provide mutexes for cookies, and for the global DNS
 // cache.
-static void curl_lock_callback(CURL* handle, curl_lock_data data, curl_lock_access access, void* userPtr)
+static void curl_lock_callback(CURL* /* handle */, curl_lock_data data, curl_lock_access /* access */, void* /* userPtr */)
 {
     if (Mutex* mutex = sharedResourceMutex(data))
         mutex->lock();
 }
 
-static void curl_unlock_callback(CURL* handle, curl_lock_data data, void* userPtr)
+static void curl_unlock_callback(CURL* /* handle */, curl_lock_data data, void* /* userPtr */)
 {
     if (Mutex* mutex = sharedResourceMutex(data))
         mutex->unlock();
@@ -312,10 +312,9 @@ static size_t headerCallback(char* ptr, size_t size, size_t nmemb, void* data)
      */
     if (header == String("\r\n") || header == String("\n")) {
         CURL* h = d->m_handle;
-        CURLcode err;
 
         long httpCode = 0;
-        err = curl_easy_getinfo(h, CURLINFO_RESPONSE_CODE, &httpCode);
+        curl_easy_getinfo(h, CURLINFO_RESPONSE_CODE, &httpCode);
 
         if (isHttpInfo(httpCode)) {
             // Just return when receiving http info, e.g. HTTP/1.1 100 Continue.
@@ -324,11 +323,11 @@ static size_t headerCallback(char* ptr, size_t size, size_t nmemb, void* data)
         }
 
         double contentLength = 0;
-        err = curl_easy_getinfo(h, CURLINFO_CONTENT_LENGTH_DOWNLOAD, &contentLength);
+        curl_easy_getinfo(h, CURLINFO_CONTENT_LENGTH_DOWNLOAD, &contentLength);
         d->m_response.setExpectedContentLength(static_cast<long long int>(contentLength));
 
         const char* hdr;
-        err = curl_easy_getinfo(h, CURLINFO_EFFECTIVE_URL, &hdr);
+        curl_easy_getinfo(h, CURLINFO_EFFECTIVE_URL, &hdr);
         d->m_response.setURL(KURL(ParsedURLString, hdr));
 
         d->m_response.setHTTPStatusCode(httpCode);
@@ -422,7 +421,7 @@ size_t readCallback(void* ptr, size_t size, size_t nmemb, void* data)
     return sent;
 }
 
-void ResourceHandleManager::downloadTimerCallback(Timer<ResourceHandleManager>* timer)
+void ResourceHandleManager::downloadTimerCallback(Timer<ResourceHandleManager>* /* timer */)
 {
     startScheduledJobs();
 
